--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "mongoose": "^8.16.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.23.0"
+    "react-router-dom": "^6.23.0",
+    "axios": "^1.6.0",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
