--- a/package.json
+++ b/package.json
@@ -10,14 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "framer-motion": "^10.16.16",
     "lucide-react": "^0.344.0",
-    "mongoose": "^8.16.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.23.0",
-    "axios": "^1.6.0",
-    "cors": "^2.8.5"
+    "framer-motion": "^11.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
@@ -34,10 +30,5 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2"
-  },
-  "main": "eslint.config.js",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  }
 }
